--- a/CSS/style.css
+++ b/CSS/style.css
@@ -144,3 +144,145 @@ main {
   line-height: 1.6rem;
   color: #757575;
 }
+.main-table-container {
+  display: grid;
+  grid-template: 35px 159px 31px/197px 38px;
+  grid-template-areas:
+    "titulo titulo"
+    "contenido boton"
+    "fecha fecha";
+  margin-left: calc(50% - 99px);
+  grid: center;
+}
+.item.title {
+  grid-area: titulo;
+  align-self: center;
+  justify-self: start;
+  margin-left: 12px;
+  font-size: 1.8rem;
+  font-weight: bold;
+  line-height: 2.3rem;
+  color: #ff9536;
+}
+.item.content {
+  grid-area: contenido;
+  display: grid;
+  grid-template: repeat(4, 1fr) / 101px 95px;
+  border-radius: 10px;
+  overflow: hidden;
+  gap: 17px;
+  margin-left: 65px;
+  margin-top: 20px;
+}
+.item.content .subitem {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding-left: 12px;
+  background-color: var(--white-color);
+}
+.item.content .text {
+  font-family: "inter", sans-serif;
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 1.9rem;
+  color: #b5b0ac;
+}
+.item.content .value {
+  font-family: "Inter", sans-serif;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #757575;
+  background-image: url("../assets/icons/trending-down.svg");
+  background-repeat: no-repeat;
+  background-position: 80%;
+}
+.item.content .value:nth-of-type(4) {
+  background-image: url("../assets/icons/trending-up.svg");
+}
+
+.item.button a {
+  display: block;
+  width: 50%;
+  height: 80%;
+}
+.item.date {
+  grid-area: fecha;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--soft-orange);
+  margin-top: 15px;
+  margin-left: 65px;
+  border-radius: 5px;
+  width: 173px;
+  height: 31px;
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 1.2rem;
+  line-height: 1.9rem;
+  color: var(--warm-black);
+}
+.item.title-two {
+  grid-area: titulo;
+  align-self: center;
+  justify-self: start;
+  margin-top: 30px;
+  margin-left: 12px;
+  font-size: 1.8rem;
+  font-weight: bold;
+  line-height: 2.3rem;
+  color: #1a9af7;
+}
+
+.main-product-detail {
+  background-color: var(--warm-black);
+  margin-top: 8rem;
+  position: relative;
+  padding-bottom: 4rem;
+}
+
+.main-product-detail h2 {
+  color: var(--just-white);
+  font-size: 2.4rem;
+  line-height: 2.6rem;
+  text-align: center;
+  padding-top: 60px;
+}
+
+.main-product-detail p {
+  color: #808080;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.product-cards-container {
+  width: 90%;
+  margin: 0 auto;
+  max-width: 90rem;
+  min-width: 25.5rem;
+  text-align: center;
+  margin-bottom: 4rem;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
+  border-radius: 4px;
+  background: #282623;
+}
+
+.product--card-title {
+  padding-top: 5rem;
+  font-weight: bold;
+  font-size: 1.8rem;
+  line-height: 1.8rem;
+  color: var(--just-white);
+}
+
+.product-card-body {
+  font-weight: var(--size-500);
+  color: #808080;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+}
