--- a/CSS/style.css
+++ b/CSS/style.css
@@ -99,7 +99,7 @@ header img {
 main {
   width: 100%;
   height: auto;
-  background-color: var(--off-white);
+  background-color: var(--warm-black);
   min-width: 320px;
 }
 
@@ -134,7 +134,7 @@ main {
   font-size: 2.4rem;
   font-weight: bold;
   line-height: 2, 6rem;
-  color: var(--black);
+  color: var(--just-white);
 }
 
 .main-exchange-container .main-exchange-container_title p {
@@ -155,14 +155,20 @@ main {
   grid: center;
 }
 .item.title {
-  grid-area: titulo;
-  align-self: center;
-  justify-self: start;
-  margin-left: 12px;
+  width: 90%;
+  margin: 0 auto;
+  max-width: 90rem;
+  min-width: 25.5rem;
+  text-align: center;
+  margin-bottom: 4rem;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
+  border-radius: 4px;
+  background: #282623;
   font-size: 1.8rem;
   font-weight: bold;
   line-height: 2.3rem;
   color: #ff9536;
+  padding-bottom: 10px;
 }
 .item.content {
   grid-area: contenido;
@@ -171,8 +177,9 @@ main {
   border-radius: 10px;
   overflow: hidden;
   gap: 17px;
-  margin-left: 65px;
+  margin-left: 35px;
   margin-top: 20px;
+  padding-bottom: 10px;
 }
 .item.content .subitem {
   display: flex;
@@ -180,13 +187,16 @@ main {
   align-items: center;
   padding-left: 12px;
   background-color: var(--white-color);
+  text-align: center;
 }
 .item.content .text {
   font-family: "inter", sans-serif;
   font-weight: 500;
   font-size: 1.6rem;
+  align-items: center;
   line-height: 1.9rem;
   color: #b5b0ac;
+  text-align: center;
 }
 .item.content .value {
   font-family: "Inter", sans-serif;
@@ -213,27 +223,27 @@ main {
   align-items: center;
   justify-content: center;
   background-color: var(--soft-orange);
-  margin-top: 15px;
-  margin-left: 65px;
-  border-radius: 5px;
-  width: 173px;
-  height: 31px;
-  font-family: "Inter", sans-serif;
-  font-weight: 700;
-  font-size: 1.2rem;
-  line-height: 1.9rem;
   color: var(--warm-black);
+  margin: 0 auto;
+  width: 90%;
+  height: auto;
+  border-radius: 4px;
 }
 .item.title-two {
-  grid-area: titulo;
-  align-self: center;
-  justify-self: start;
-  margin-top: 30px;
-  margin-left: 12px;
+  width: 90%;
+  margin: 0 auto;
+  max-width: 90rem;
+  min-width: 25.5rem;
+  text-align: center;
+  margin-bottom: 4rem;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
+  border-radius: 4px;
+  background: #282623;
   font-size: 1.8rem;
   font-weight: bold;
   line-height: 2.3rem;
   color: #1a9af7;
+  padding-bottom: 20px;
 }
 
 .main-product-detail {
@@ -241,6 +251,16 @@ main {
   margin-top: 8rem;
   position: relative;
   padding-bottom: 4rem;
+}
+
+.main-product-detail_logobatata {
+  display: inline-block;
+  width: 4.1rem;
+  height: 2.4rem;
+  background: url("../assets/icons/batata.svg") no-repeat center/cover;
+  position: relative;
+  left: calc(50% - 20.5px);
+  bottom: 12px;
 }
 
 .main-product-detail h2 {
