--- a/CSS/style.css
+++ b/CSS/style.css
@@ -280,29 +280,49 @@ main {
   padding-bottom: 15px;
 }
 
-.product-cards-container {
+.product-detail-card {
   width: 90%;
-  margin: 0 auto;
-  max-width: 90rem;
-  min-width: 25.5rem;
-  text-align: center;
-  margin-bottom: 4rem;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
-  border-radius: 4px;
-  background: #282623;
+  min-width: 288px;
+  max-width: 400px;
+  height: 150px;
+  margin: 15px auto;
+  padding: 15px;
+  padding-bottom: 15px;
+  background-color: var(--black);
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
 }
-
-.product--card-title {
-  padding-top: 5rem;
-  font-weight: bold;
+.product-detail-card .icon-card {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-bottom: 10px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.product-detail-card .clock {
+  background-image: url("./../assets/icons/clock.svg");
+}
+.product-detail-card .eye {
+  background-image: url("../assets/icons/eye.svg");
+}
+.product-detail-card .dollar {
+  background-image: url("../assets/icons/dollar-sign.svg");
+}
+.product-detail-card .circle {
+  background-image: url("../assets/icons/check-circle.svg");
+}
+.product-card-title {
+  margin-bottom: 15px;
   font-size: 1.8rem;
+  font-weight: bold;
   line-height: 1.8rem;
   color: var(--just-white);
 }
-
 .product-card-body {
-  font-weight: var(--size-500);
-  color: #808080;
   font-size: 1.4rem;
+  font-weight: 500;
   line-height: 1.8rem;
+  color: #808080;
 }
